maze.lessons.maze.island.IslandMaze.scala.error
Escaper:15: error: illegal start of statement
	match etat {
        ^Escaper:27: error: ')' expected but '}' found.
} 
^